--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "adventofcode",
   "version": "1.0.0",
-  "main": "day001.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "js-priority-queue": "^0.1.5"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
